--- a/env.js.sample
+++ b/env.js.sample
@@ -1,6 +1,6 @@
 const ENV = {
   DISCORD_ALERT_WEBHOOK: 'YOUR_WEBHOOK_TOKEN',
-  LI_MENTION_ROLE_ID: 'YOUR_SERVER_MENTION_ROLE_ID',
+  MENTION_ROLE_ID: 'YOUR_SERVER_MENTION_ROLE_ID',
 };
 
 function seedSecretsOnce() {
